# osdev

./: .gitignore  Cargo.toml  Justfile
src/: lib.rs  music.rs  util.rs  vga.rs
src/14/: .gitignore  flake.nix
src/14/src/: main.rs
src/14_gang/: Cargo.toml  Justfile  README.md  grub.cfg  linker.ld
src/14_gang/src/: lib.rs  music.rs
src/14_gang/src/interrupts/: handlers.rs  mod.rs  pic.rs  pit.rs
src/14_gruppa/: .gitignore  Cargo.toml  Justfile  Makefile  README.md  flake.nix  link.ld  linker.ld
src/14_gruppa/.cargo/: config.toml
src/14_gruppa/cargo/: config.toml
src/14_gruppa/src/: allocator.rs  console.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  load.asm  main.rs  memory.rs  pit.rs  sound.rs  util.rs  vga.rs
src/14_gruppa/src/arch/x86_64/: linker.ld
src/14_gruppa/src/asm/: boot.asm  long_mode_init.asm  multiboot_header.asm
src/14_gruppa/src/memory/: entry.rs  frame_allocator.rs  heap_allocator.rs  mapper.rs  mod.rs  page.rs  stack_allocator.rs  table.rs  temporary_page.rs
src/14_gruppa/src/memory/paging/: entry.rs  mapper.rs  mod.rs  page.rs  table.rs  temporary_page.rs
src/14_gruppa/src/task/: executor.rs  keyboard.rs  mod.rs
src/asm/: boot.asm
src/interrupts/: gdt.rs  handlers.rs  idt.rs  mod.rs  norwegian.rs  pic.rs  pit.rs
src/memory/: frame_allocator.rs  heap_allocator.rs  mod.rs
