[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-args = [
    "-audiodev", "pa,id=speaker", "-machine", "pcspk-audiodev=speaker"
]

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
bootloader = "0.9.23"
pc-keyboard = "0.5.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
