[package]
name = "os"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.5.2"
rlibc = "1.0.0"
x86_64 = "0.14.2"
pic8259 = "0.10.1"
bitflags = "2.4.2"
volatile = "0.2.6"
bit_field = "0.10.2"
multiboot2 = "0.19.0"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
